Fixed spacing on the Events page

--- a/templates/style.css
+++ b/templates/style.css
@@ -10,6 +10,11 @@ body {
   padding: 0;
 }
 
+.event-section {
+  padding-bottom: 2em;
+  background-color: rgb(231,227,225);
+}
+
 /* Navigation */
 
 @media screen and (min-width:800px) {
@@ -310,6 +315,10 @@ a.menu-link {
   z-index: -1;
 }
 
+.hoverimage:hover {
+  opacity: .8;
+}
+
 img {
   max-width: 100%;
 }
@@ -319,6 +328,18 @@ img {
 .eventblock {
   background-color: rgb(231,227,225);
   padding: 2.25em 0 1.75em 0;
+  margin: 0;
+}
+
+.eventblock-2 {
+  background-color: rgb(231,227,225);
+  padding: .5em 0 .5em 0;
+  margin: 0;
+}
+
+.eventblock-3 {
+  background-color: rgb(231,227,225);
+  padding: 2em 0 .2em 0;
   margin: 0;
 }
 
@@ -365,6 +386,16 @@ figure {
     display: flex;
     padding: 2em;
   }
+  .eventblock-2 {
+    margin: 0 auto;
+    display: flex;
+    padding: 1em 2em;
+  }
+  .eventblock-3 {
+    margin: 0 auto;
+    display: flex;
+    padding: 2.5em 2em 1em 2em;
+  }
   .midtermphoto {
     float: left;
     height: auto;
@@ -379,6 +410,12 @@ figure {
 @media screen and (min-width:776px) {
   .eventblock {
     padding: 2.5em;
+  }
+  .eventblock-2 {
+    padding: 1em 2.5em;
+  }
+  .eventblock-3 {
+    padding: 2.5em 2.5em 1em 2.5em;
   }
 }
 
@@ -419,7 +456,31 @@ h4 {
     padding-right: 2em;
     padding-left: 1.8em;
   }
+  .eventblock-2 p {
+    font-size: 1.1em;
+    line-height: 1.4em;
+    margin-top: .75em;
+    padding-right: 2em;
+    padding-left: 1.8em;
+  }
+  .eventblock-3 p {
+    font-size: 1.1em;
+    line-height: 1.4em;
+    margin-top: .75em;
+    padding-right: 2em;
+    padding-left: 1.8em;
+  }
   .eventblock h5 {
+    font-size: 1.3em;
+    margin-top: -.75em;
+    margin-left: .5em;
+  }
+  .eventblock-2 h5 {
+    font-size: 1.3em;
+    margin-top: -.75em;
+    margin-left: .5em;
+  }
+  .eventblock-3 h5 {
     font-size: 1.3em;
     margin-top: -.75em;
     margin-left: .5em;
@@ -439,7 +500,21 @@ h4 {
     padding-left: 2em;
     font-size: 1.2em;
   }
+  .eventblock-2 p {
+    padding-left: 2em;
+    font-size: 1.2em;
+  }
+  .eventblock-3 p {
+    padding-left: 2em;
+    font-size: 1.2em;
+  }
   .eventblock h5 {
+    padding-left: 1.25em;
+  }
+  .eventblock-2 h5 {
+    padding-left: 1.25em;
+  }
+  .eventblock-3 h5 {
     padding-left: 1.25em;
   }
 }
@@ -480,7 +555,23 @@ h4 {
     padding-left: 2em;
     font-size: 1.3em;
   }
+  .eventblock-2 p {
+    padding-left: 2em;
+    font-size: 1.3em;
+  }
+  .eventblock-3 p {
+    padding-left: 2em;
+    font-size: 1.3em;
+  }
   .eventblock h5 {
+    padding-left: 1em;
+    font-size: 1.65em;
+  }
+  .eventblock-2 h5 {
+    padding-left: 1em;
+    font-size: 1.65em;
+  }
+  .eventblock-3 h5 {
     padding-left: 1em;
     font-size: 1.65em;
   }
